Bug 1442200 - about:profiles passes a removeFiles boolean param to nsIToolkitProfile::removeInBackground, r=ehsan a=jcristau

--HG--
extra : source : 3af13e1ae15a66c1956de5476953f32e1d77c0d3